{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 19,
  "lineage": "cb77f749-6b22-0ebd-a5df-9f8a83e0233d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/dmz",
            "location": "eastus2",
            "name": "dmz",
            "resource_group_name": "kthws",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.kthw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/internal",
            "location": "eastus2",
            "name": "internal",
            "resource_group_name": "kthws",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "everything",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.kthw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dmz_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/dmz/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "dmz",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "kthws",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dmz",
            "azurerm_resource_group.kthw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/internal/securityRules/everything",
            "name": "everything",
            "network_security_group_name": "internal",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "kthws",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.internal",
            "azurerm_resource_group.kthw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.240.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3852b0bc-78c1-48c4-a2ca-964e7a74dc51",
            "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/virtualNetworks/kubernetes-the-hard-way",
            "location": "eastus2",
            "name": "kubernetes-the-hard-way",
            "resource_group_name": "kthws",
            "subnet": [
              {
                "address_prefix": "10.240.0.0/28",
                "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/virtualNetworks/kubernetes-the-hard-way/subnets/dmz",
                "name": "dmz",
                "security_group": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/dmz"
              },
              {
                "address_prefix": "10.240.0.16/28",
                "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/virtualNetworks/kubernetes-the-hard-way/subnets/control-plane",
                "name": "control-plane",
                "security_group": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/internal"
              },
              {
                "address_prefix": "10.240.0.32/28",
                "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/virtualNetworks/kubernetes-the-hard-way/subnets/nodes-plane",
                "name": "nodes-plane",
                "security_group": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/internal"
              },
              {
                "address_prefix": "10.240.0.64/28",
                "id": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/virtualNetworks/kubernetes-the-hard-way/subnets/load-balancing",
                "name": "load-balancing",
                "security_group": "/subscriptions/7edd9904-9297-4758-8a56-c24ea275ce2b/resourceGroups/kthws/providers/Microsoft.Network/networkSecurityGroups/internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_network_security_group.dmz",
            "azurerm_network_security_group.internal",
            "azurerm_resource_group.kthw"
          ]
        }
      ]
    }
  ]
}